Fix css issue for dark themes && Make right alignment a setting

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,6 +1,5 @@
-.d-header .title a {
-  display: inline-block;
-  vertical-align: top;
+.d-header .title {
+  display: flex;
 }
 
 .header-search-enabled .search-header a, .header-search-enabled .search-header a:visited {
@@ -11,12 +10,42 @@
   display: none;
 }
 
+.header-search-enabled.align-right .contents {
+   display: flex;
+   justify-content: space-between;
+
+   &:before, &:after {
+     display: none;
+   }
+
+   .title {
+     flex: 1 1 auto;
+     justify-content: space-between;
+   }
+
+   .search-header {
+     float: right;
+     margin-left: 0;
+     margin-right: 10px;
+   }
+
+   .search-input {
+     margin-right: 0;
+   }
+
+   .search-context {
+     padding-top: 5px;
+   }
+
+   .results {
+     right: 0;
+   }
+}
+
 .title .search-header {
-  display: inline-block;
-  vertical-align: top;
   width: 350px;
   margin-left: 20px;
-  padding-top: 5px;
+  margin-top: 5px;
   position: relative;
   white-space: nowrap;
   background-color: $secondary;
